--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="80dp"
     android:background="#BAF12020">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,8 +13,9 @@
 
         <TextView
             android:id="@+id/recId"
-            android:layout_width="40dp"
-            android:layout_height="70dp"
+            android:layout_width="38dp"
+            android:layout_height="80dp"
+
 
             android:gravity="center"
             android:hint="id"
@@ -27,8 +28,9 @@
         <TextView
 
             android:id="@+id/recFirst"
-            android:layout_width="173dp"
-            android:layout_height="match_parent"
+            android:layout_width="162dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="4dp"
             android:hint="First Name"
             android:paddingLeft="10dp"
             android:paddingTop="18dp"
@@ -41,29 +43,31 @@
 
         <TextView
             android:id="@+id/recLast"
-            android:layout_width="200dp"
-            android:layout_height="71dp"
+            android:layout_width="176dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="4dp"
             android:hint="LastName"
             android:paddingLeft="10dp"
             android:paddingTop="18dp"
             android:textColor="#3E5AFA"
-            android:textColorHint="#656464"
 
+            android:textColorHint="#656464"
             android:textSize="25dp"
-            app:layout_constraintEnd_toEndOf="@+id/delbtn"
+            app:layout_constraintEnd_toStartOf="@+id/delbtn"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/recFirst"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/delbtn"
-            android:layout_width="40dp"
-            android:layout_height="61dp"
-            android:background="#F80606"
+            android:layout_width="29dp"
+            android:layout_height="75dp"
+            android:background="#00F80606"
+            android:backgroundTint="#E80F0F"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.526"
+            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@android:drawable/ic_menu_delete" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
