--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,29 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
 
-    <EditText
-        android:id="@+id/firstName"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:hint="Username"
-        android:textColor="@color/black"
-        android:textColorHint="#373535"
-        android:layout_marginTop="40dp"/>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/lastName"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:hint="Password"
-        android:inputType="textVisiblePassword"
-        android:textColor="@color/black"
-        android:textColorHint="#373535"
-        android:layout_marginTop="15dp"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/firstName"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="40dp"
+            android:hint="Username"
+            android:textColor="@color/black"
+            android:textColorHint="#373535">
+
+        </com.google.android.material.textfield.TextInputEditText>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/lastName"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="15dp"
+            android:hint="Password"
+            android:inputType="textVisiblePassword"
+            android:textColor="@color/black"
+            android:textColorHint="#373535">
+
+        </com.google.android.material.textfield.TextInputEditText>
+    </com.google.android.material.textfield.TextInputLayout>
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -55,16 +72,15 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
     <EditText
         android:id="@+id/idNo"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_marginTop="20dp"
         android:hint="Enter ID"
         android:inputType="number"
         android:textColor="@color/black"
-        android:textColorHint="#373535"
-        android:layout_marginTop="20dp"/>
+        android:textColorHint="#373535" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -111,13 +127,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:hint="id username password"
-        android:textSize="22dp"
-        android:textAlignment="center"
         android:paddingTop="15dp"
+        android:textAlignment="center"
+        android:textSize="22dp"
 
         />
-
-
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
