--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -31,7 +31,7 @@
             android:layout_width="162dp"
             android:layout_height="75dp"
             android:layout_marginTop="4dp"
-            android:hint="First Name"
+            android:hint="User Name"
             android:paddingLeft="10dp"
             android:paddingTop="18dp"
             android:textColor="#3E5AFA"
@@ -46,7 +46,7 @@
             android:layout_width="176dp"
             android:layout_height="75dp"
             android:layout_marginTop="4dp"
-            android:hint="LastName"
+            android:hint="Password"
             android:paddingLeft="10dp"
             android:paddingTop="18dp"
             android:textColor="#3E5AFA"
